--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=ranking-api
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tBKRGOVdGzwO9iMD8lHubdDZJ07FGMTV5xW+y7RulFE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=ranking-db
+DB_PORT=5432
+DB_DATABASE=ranking
+DB_USERNAME=ranking
+DB_PASSWORD=ranking
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
