Alteração do .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
+/database/database.sqlite.bkp
 /node_modules
 /public/hot
 /public/storage
+/public/.htaccess
 /storage/*.key
 /vendor
-.env
-.env.backup
-.phpunit.result.cache
+/coverage
+/.idea
+/.vscode
+/.vagrant
+/bin/*
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.env
+/.sonar
+/docker-compose.override.yml
+docker/.DS_Store
+.DS_Store
+.scannerwork
+/.ci
